--- a/.editorconfig
+++ b/.editorconfig
@@ -5,7 +5,7 @@ end_of_line = lf
 insert_final_newline = true
 
 # Matches multiple files with brace expansion notation
-[*.{py,cpp,cc,cxx,c++,c,C,hpp,hxx,h}]
+[*.{cpp,cc,py}]
 charset = utf-8
 indent_style = tab
 indent_size = 4
