fix: file-suffix and configs

--- a/.editorconfig
+++ b/.editorconfig
@@ -5,11 +5,11 @@ end_of_line = lf
 insert_final_newline = true
 
 # Matches multiple files with brace expansion notation
-[*.{cpp,cc,c,hpp,h,py,java,go}]
+[*.{cpp,py,java,go}]
 charset = utf-8
 indent_style = space
 indent_size = 4
 trim_trailing_whitespace = true
 
 [*.md]
-trim_trailing_whitespace = false
+trim_trailing_whitespace = true
